# gbnet-hs

./: .gitignore  CHANGELOG.md  CLAUDE.md  EXAMPLES.md  LICENSE  README.md  gb-net-hs.cabal  gbnet-hs.cabal
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
bench/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: gb-net-hs-0.1.0.0-inplace.conf  package.cache
docs/: ARCHITECTURE_OVERHAUL.md
src/: GBNet.hs
src/GBNet/: Channel.hs  Class.hs  Config.hs  Congestion.hs  Connection.hs  Crypto.hs  Delta.hs  Fragment.hs  Interest.hs  Interpolation.hs  Net.hs  Packet.hs  Peer.hs  Priority.hs  Reliability.hs  Security.hs  Serialize.hs  Simulator.hs  Socket.hs  Stats.hs  TestNet.hs  Types.hs  Util.hs  ZeroCopy.hs
src/GBNet/Net/: IO.hs
src/GBNet/Peer/: Handshake.hs  Internal.hs  Migration.hs  Protocol.hs
src/GBNet/Replication/: Delta.hs  Interest.hs  Interpolation.hs  Priority.hs
src/GBNet/Serialize/: BitBuffer.hs  Class.hs  FastSupport.hs  FastTH.hs  Reader.hs  TH.hs
test/: Main.hs
