cabal-version:      3.0
name:               gbnet-hs
version:            0.2.0.0
synopsis:           Transport-level networking library with bitpacked serialization
description:
  A transport-level networking library providing reliable UDP with
  bitpacked serialization, dual-layer congestion control, and
  effect-abstracted design for pure deterministic testing.

license:            MIT
license-file:       LICENSE
author:             Devon Tomlin
maintainer:         devon@novavero.ai
homepage:           https://github.com/Gondola-Bros-Entertainment/gbnet-hs
bug-reports:        https://github.com/Gondola-Bros-Entertainment/gbnet-hs/issues
category:           Network, Game
stability:          experimental
build-type:         Simple
tested-with:        GHC == 9.6.7
extra-doc-files:
    README.md
    CHANGELOG.md

library
  exposed-modules:
    GBNet
    GBNet.Serialize.BitBuffer
    GBNet.Serialize.Class
    GBNet.Serialize.Reader
    GBNet.Serialize.TH
    GBNet.Packet
    GBNet.Util
    GBNet.Reliability
    GBNet.Channel
    GBNet.Config
    GBNet.Congestion
    GBNet.Stats
    GBNet.Connection
    GBNet.Fragment
    GBNet.Security
    GBNet.Simulator
    GBNet.Socket
    GBNet.Peer
    GBNet.Replication.Delta
    GBNet.Replication.Interest
    GBNet.Replication.Priority
    GBNet.Replication.Interpolation
    GBNet.Class
    GBNet.Types
    GBNet.TestNet
    GBNet.Net
    GBNet.Net.IO

  build-depends:
      base                >= 4.16 && < 5
    , bytestring          >= 0.11 && < 0.13
    , text                >= 2.0 && < 2.2
    , template-haskell    >= 2.18 && < 2.23
    , containers          >= 0.6 && < 0.8
    , vector              >= 0.12 && < 0.14
    , network             >= 3.1 && < 3.3
    , mtl                 >= 2.2 && < 2.4
    , random              >= 1.2 && < 1.3
    , transformers        >= 0.5 && < 0.7
    , stm                 >= 2.5 && < 2.6
    , crc32c              >= 0.2 && < 0.3

  hs-source-dirs:   src
  default-language:  Haskell2010
  -- Game networking hot paths (bitpacking, congestion control, sequence
  -- arithmetic) benefit measurably from -O2 and aggressive specialisation.
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -O2
    -fspecialise-aggressively
    -fexpose-all-unfoldings

test-suite gbnet-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:
      base
    , gbnet-hs
    , bytestring
    , text
    , network
    , QuickCheck          >= 2.14 && < 2.16
    , containers
  default-language: Haskell2010
  ghc-options:      -Wall

source-repository head
  type:     git
  location: https://github.com/Gondola-Bros-Entertainment/gbnet-hs
  branch:   main
